# viroli_webserv

./: .clang-format  .gitignore  CMakeLists.txt  README.md  nginx_grammar
.github/workflows/: main.yml
code/: Makefile  webserv
code/includes/autoindex/: Autoindex.hpp
code/includes/cgi/: Cgi.hpp  CgiVars.hpp  Env.hpp  Exec.hpp  Executables.hpp  Pipes.hpp
code/includes/config/: Composite.hpp  Config.hpp  ConfigParser.hpp  Directive.hpp  DirectiveParam.hpp  MimeTypes.hpp  Param.hpp  Server.hpp  config.hpp
code/includes/ipollable/: Buffer.hpp  CgiFD.hpp  ClientFD.hpp  FileFD.hpp  IPollable.hpp  PollableFactory.hpp  ServerFD.hpp
code/includes/request/: CGIRequest.hpp  HttpRequest.hpp  Request.hpp  RequestInterface.hpp
code/includes/response/: HttpStatus.hpp  Response.hpp
code/includes/server/: Location.hpp  Server.hpp  server.hpp
code/includes/utils/: Defines.hpp  Exception.hpp  FileStat.hpp  Files.hpp  Utils.hpp
code/object_files/: main.d
code/object_files/autoindex/: Autoindex.d
code/object_files/config/: Config.d  ConfigParser.d
code/object_files/ipollable/: ClientFD.d  FileFD.d  IPollable.d  ServerFD.d
code/object_files/request/: CGIRequest.d  HttpRequest.d  Request.d  RequestInterface.d
code/object_files/response/: HttpStatus.d  Response.d
code/object_files/server/: Location.d  Server.d
code/object_files/utils/: FileStat.d  Utils.d
code/source_files/: client.py  connection.cpp  connection.hpp  main.cpp  microserver.cpp  microserver.hpp  miniserver.cpp  miniserver.hpp  pollable.cpp  pollable.hpp
code/source_files/autoindex/: Autoindex.cpp
code/source_files/cgi/: Cgi.cpp  CgiVars.cpp  Env.cpp  Exec.cpp  Executables.cpp  Pipes.cpp
code/source_files/config/: Config.cpp  ConfigParser.cpp  Directive.cpp  DirectiveParam.cpp  MimeTypes.cpp  Param.cpp  config.cpp
code/source_files/ipollable/: Buffer.cpp  CgiFD.cpp  ClientFD.cpp  FileFD.cpp  IPollable.cpp  PollableFactory.cpp  ServerFD.cpp
code/source_files/request/: CGIRequest.cpp  HttpRequest.cpp  Request.cpp  RequestInterface.cpp
code/source_files/response/: HttpStatus.cpp  Response.cpp
code/source_files/server/: Location.cpp  Server.cpp  server.cpp
code/source_files/utils/: FileStat.cpp  Files.cpp  Utils.cpp
code/utilities/: html_errorpage_generator.c
data/config/: default.config  incomplete.config  testconfig2.config
tests/: Makefile  uploadInstructions.txt
tests/siege/: urls.txt
website/config/: all.config  default.config  find_servername.config  incomplete.config  intratest.config  lisa.config  test.config
website/data/CSS/: example_01.css
website/data/html/: index_01.html  index_02.html
website/html/: index.html
website/html/can_get/: can_get.txt
website/html/cannot_post/: pinda.txt  test.txt
website/html/cgi-bin/: add.py  echo.sh  get.py  index.html  test.py
website/html/css/: style.css
website/html/custom_error/: a404.html
website/html/error-pages/: 100.html  101.html  102.html  200.html  201.html  (+63 more)
(+14 files in other folders)
